frontend/styles/shared-styles.css
/*
   CSS styling examples for the Vaadin app.
   Visit https://vaadin.com/docs/flow/theme/theming-overview.html and
   https://vaadin.com/themes/lumo for more information.
*/

.soulpatches-view {
    margin: 0 auto;
}

.logo {
    height: 5em;
}

.soulfile-editor {
    background-color: var(--lumo-shade-5pct);
    border: 1px solid var(--lumo-contrast-5pct);
}

/* Main Layout */
a[highlight] {
    font-weight: bold;
    text-decoration: underline;
}

.header {
    padding: 0 var(--lumo-space-m);
}

.header h1.logo {
    font-size: 1em;
    margin: var(--lumo-space-m);
}

.sp-grid-col-description {
    word-wrap: break-word;
    white-space: pre-line;
}

